--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,8 +10,8 @@
     <th>event</th>
     <th>Notes</th>
     <th>Coach</th>
-    <th>Venue</th>
-    <th>Venue booked with</th>
+    <th>Studio</th>
+    <th>Studio booked with</th>
     <th>Advance venue payment required</th>
     <th></th>
     <th></th>
@@ -34,7 +34,7 @@
     </td>
     <td><%= booking.notes %></td>
     <td><%= booking.coach %></td>
-    <td><%= booking.venue %></td>
+    <td><%= booking.studio %></td>
     <td><%= booking.venue_booked_with %></td>
     <td><%= booking.advance_venue_payment_required %></td>
     <td><%= link_to 'Show', booking %></td>
