--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -44,12 +44,12 @@
 </p>
 
 <p>
-  <b>Venue:</b>
-  <%= @booking.venue %>
+  <b>Studio:</b>
+  <%= @booking.studio %>
 </p>
 
 <p>
-  <b>Venue booked with:</b>
+  <b>Studio booked with:</b>
   <%= @booking.venue_booked_with %>
 </p>
 
