--- a/app/views/studios/_form.html.erb
+++ b/app/views/studios/_form.html.erb
@@ -35,9 +35,10 @@
     <%= f.label :notes %><br />
     <%= f.text_area :notes %>
   </div>
-  <div class="field">
+	<div class="field">
     <%= f.label :venue %><br />
-    <%= f.text_field :venue %>
+    <%= f.collection_select :venue_id, @venues, :id, :name, :prompt => "Select a venue" %>
+    <%= link_to 'Add new venue', new_venue_path %>
   </div>
   <div class="actions">
     <%= f.submit %>
