--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Editing booking</h1>
+<div class="container">
+	<h1>Editing booking</h1>
 
-<p id="notice"><%= notice %></p>
+	<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @booking %> |
-<%= link_to 'Back', bookings_path %>
+</div>
