--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,8 +1,14 @@
 <div class="container">
-	<h1>Editing booking</h1>
-
+	<div class = "row">
+		<div class = "col-md-11">
+			<h1>Editing booking <small><%= @booking %></small></h1>
+		</div>
+		<div class = "col-md-1">
+			<%= button_to "Delete booking", @booking, :method=>:delete, :class=>"btn btn-danger",:confirm=>"Are you sure?" %>
+		</div>
+	</div>
+	
 	<p id="notice"><%= notice %></p>
 
 	<%= render 'form' %>
-
 </div>
