--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -11,11 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
+<form role="form"> <!-- Bootstrap CSS styling -->
+<div class = "row">
+	<div class = "col-md-6">
+	  <div class="form-group">
+			<%= f.label :name %><br />
+			<%= f.text_field :name, {:class=>"form-control"} %>
+		</div>
+	</div>
+	<div class = "col-md-6">
+		<div class="form-group">
+			<%= f.label :region %><br />
+			<%= f.select :region, City::REGIONS, {}, { :size=>City::REGIONS.count, :class=>"form-control" } %>
+		</div>
+	</div>
+	
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"btn btn-default" %>
   </div>
 <% end %>
