--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,23 +1,20 @@
-<h1>Listing cities</h1>
+<div class="container">
+	<div class="page-header">
+		<h1>Cities</h1>
+	</div>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @cities.each do |city| %>
-  <tr>
-    <td><%= city.name %></td>
-    <td><%= link_to 'Show', city %></td>
-    <td><%= link_to 'Edit', edit_city_path(city) %></td>
-    <td><%= link_to 'Destroy', city, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+	<% City::REGIONS.each do |region| %>
+		<h2><%= region %></h2>
+		<table class="table table-condensed">
+		<% City.find_all_by_region(region).each do |city| %>
+			<tr>
+				<td><%= city.name %></td>
+				<td><%= link_to 'Edit', edit_city_path(city) %></td>
+			</tr>
+		<% end %>
+		</table>
+	<% end %>
 
 <br />
 
-<%= link_to 'New City', new_city_path %>
+<%= link_to 'Create new City', new_city_path %>
