--- a/app/views/instructor_events/new.html.erb
+++ b/app/views/instructor_events/new.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-	<h1>New city</h1>
-
+	<h1>New instructor note <small>for <%= @booking %></small></h1>
 	<%= render 'form' %>
-
 	<%= link_to 'Home', root_path %>
 </div>
