--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 	<%= yield %>
 	
 	<!-- Latest compiled and minified JavaScript -->
+	<script type="text/javascript" src='http://code.jquery.com/jquery-1.8.2.js'></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-	<%= javascript_include_tag "application" %>
+	<%= javascript_include_tag "bookings" %>
 </body>
 </html>
