--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing venue</h1>
+<div class="container">
+	<div class = "row">
+		<div class = "col-md-11">
+			<h1>Editing venue <small><%= @venue %></small></h1>
+		</div>
+		<div class = "col-md-1">
+			<%= button_to "Delete venue", @venue, :method=>:delete, :class=>"btn btn-danger",:confirm=>"Are you sure?" %>
+		</div>
+	</div>
+	
+	<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @venue %> |
-<%= link_to 'Back', venues_path %>
+	<%= render 'form' %>
+</div>
