--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New venue</h1>
+<div class="container">
+	<h1>New venue</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', venues_path %>
+	<%= link_to 'Home', root_path %>
+</div>
