--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -17,4 +17,4 @@
 
 <br />
 
-<%= link_to 'Create new City', new_city_path %>
+<%= link_to 'Create new City', new_city_path %> | <%= link_to 'Home', root_path %>
