--- a/app/views/coaches/edit.html.erb
+++ b/app/views/coaches/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing coach</h1>
+<div class="container">
+	<div class = "row">
+		<div class = "col-md-11">
+			<h1>Editing instructor</h1>
+		</div>
+		<div class = "col-md-1">
+			<%= button_to "Delete instructor", @coach, :method=>:delete, :class=>"btn btn-danger",:confirm=>"Are you sure?" %>
+		</div>
+	</div>
+	
+	<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @coach %> |
-<%= link_to 'Back', coaches_path %>
+	<%= render 'form' %>
+</div>
