--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -8,8 +8,6 @@
     <th>Day rate</th>
     <th>City</th>
     <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @coaches.each do |coach| %>
@@ -19,13 +17,11 @@
     <td><%= coach.email %></td>
     <td><%= coach.day_rate %></td>
     <td><%= coach.cities.collect { |c| c.name }.to_sentence %></td>
-    <td><%= link_to 'Show', coach %></td>
     <td><%= link_to 'Edit', edit_coach_path(coach) %></td>
-    <td><%= link_to 'Destroy', coach, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Coach', new_coach_path %>
+<%= link_to 'New Instructor', new_coach_path %>
