--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New theme</h1>
+<div class="container">
+	<h1>New theme</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', themes_path %>
+	<%= link_to 'Home', root_path %>
+</div>
